--- a/leosezpanik.html
+++ b/leosezpanik.html
@@ -14,7 +14,16 @@
 
     <p>Um site onde os amantes de receita, podem procurar e até compartilhar suas receitas favoritas, com recursos como avaliaçoẽs de receitas,fotos sobre a receita e até mesmo um sistema de busca sobre receitas e culinarias.</p>
     <p>O objetivo é tornar a culinária acessivel a todos, independente do nível de habilidade na cozinha. Por isso, além das receitas, também oferecemos dicas úteis,truques e técnicas culinárias para ajudar vocẽ para aprimorar suas habilidades culinárias. Quer esteja apenas começando sua jornada na cozinha ou seja um chefe experiente em busca de novas idéias, temos algo para todos.</p>
-    <p>paragrafo 3</p>
+    <p>Um site querido onde os amantes de cozinha conseguem compartilhar e ver receitas queridas</p>
     <P> <strong> paragrafo com conteudo escrito</strong></P>
+    <h2>Bolo de cenoura</h2>
+    <h3>MASSA</h3>
+    <li>2 cenouras médias, cortadas em cubos 300 g</li>
+    <li>1/2 xícara de chá de óleo 125 ml</li>
+    <li>3 ovos</li>
+    <li>1 1/2 xícara de chá de farinha de trigo 210 g</li>
+    <li>1/2 xícara de chá de Amido de Milho Maizena Vita + 60 g</li>
+    <li>2 colheres de chá de fermento em pó 8 g</li>
+    <li>1 xícara de chá de açúcar 190 g</li>
 </body>
 </html>
