--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <title>Document</title>
 <body>
     
-    <h1>class="título" style="color: #eead2d;"> Delicias Celc</h1> style="color: #ffffff;">
+    <h1> Delicias Celc</h1> 
 
     <p>Um site onde os amantes de receita, podem procurar e até compartilhar suas receitas favoritas, com recursos como avaliaçoẽs de receitas,fotos sobre a receita e até mesmo um sistema de busca sobre receitas e culinarias.</p>
     <p>O objetivo é tornar a culinária acessivel a todos, independente do nível de habilidade na cozinha. Por isso, além das receitas, também oferecemos dicas úteis,truques e técnicas culinárias para ajudar vocẽ para aprimorar suas habilidades culinárias. Quer esteja apenas começando sua jornada na cozinha ou seja um chefe experiente em busca de novas idéias, temos algo para todos.</p>
