--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <img=scr"o-que-e-gastronomia.jpg"
         </div>
-    <p> <strong> paragrafo com conteudo escrito</strong></P>
+    <p> <strong> RECEITAS</strong></P>
     <p style="color: #faf9bf;"><strong> Bolo de cenoura  </strong> </p>
     <h2>MASSA</h2>
     <li>2 cenouras médias, cortadas em cubos 300 g</li>
