--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>O objetivo é tornar a culinária acessivel a todos, independente do nível de habilidade na cozinha. Por isso, além das receitas, também oferecemos dicas úteis,truques e técnicas culinárias para ajudar vocẽ para aprimorar suas habilidades culinárias. Quer esteja apenas começando sua jornada na cozinha ou seja um chefe experiente em busca de novas idéias, temos algo para todos.</p>
     <p>Um site querido onde os amantes de cozinha conseguem compartilhar e ver receitas queridas</p>
 
-    <img=scr"o-que-e-gastronomia.jpg"
+    <img=scr"o-que-e-gastronomia.jpg">
         </div>
     <p> <strong> RECEITAS</strong></P>
     <p style="color: #faf9bf;"><strong> Bolo de cenoura  </strong> </p>
